# RSGrapher

./: .gitignore  README.md  S1_YL.tex  TODO.txt  app.py  build.sh  data.py  plot.py  pyproject.toml  rawdata.asc  requirements.txt  run.bat  run.py  runtest.py  scratch.py  testrun.py  wat.c
.github/workflows/: python-app.yml  release.yml
RSG 1 - Test/: project.ini
RSG 100 - PNP/: project.ini
RSG 100 - Test Project/: project.ini
RSG001 - asdf/: project.json
RSG120 - Test Proj/: project.ini
RSG400 - Hello/: project.json
RSG400 - Hello/Samples/Goodbye/: sample.json
RSG400 - Hello/Samples/Hello/: sample.json
RSG430 - Project 1/: project.ini
app/: __init__.py  ascreader.py  datastructure.py  main.py  project.py  root.py  rsgdialog.py
app/gui/: __init__.py  abstract_tab_frame.py  app_window.py  data_frame.py  dataframe.py  dialog.py  drag_handler.py  info_frame.py  infoframe.py  main_frame.py  plot_canvas.py  plot_frame.py  progress_buttons.py  project_frame.py  project_handler.py  root.py  root_frame.py  sample_edit_frame.py  stateframe.py
app/gui/dialog/: __init__.py  changeableframe.py  choosesample.py  date_input.py  footnote_text.py  newproject.py  newsample.py  select_sample.py  welcomescreen.py
app/gui/frame/: __init__.py  abstract_tab_frame.py  asc_data_frame.py  basic_info_frame.py  (+14 more)
app/project/: asc_data.py  datastructure.py  helper.py  project_dir.py  project_handler.py  sample.py
app/util/: asc_data.py  ascreader.py  auto_elastic.py  gen_pdf.py  linear_reg.py  pdf.py  progress_enum.py  sample_state.py  search.py
test/: test_search.py
(+43 files in other folders)
