[tool.poetry]
name = "rsgrapher"
version = "0.4.0"
description = "Desktop application for generating stress/strain plots from rebar stress-test data"
authors = ["Alex Page <apage@mintel.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.1"
matplotlib = "==3.2.2"
reportlab = "^3.6.12"
pandas = "^1.5.2"
PyPDF2 = "<2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
