[tool.poetry]
name = "rsgrapher"
version = "0.4.0"
description = "Desktop application for generating stress/strain plots from rebar stress-test data"
authors = ["Alex Page <apage@mintel.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
matplotlib = "==3.2.2"
PyPDF2 = "<2.0.0"
numpy = "^1.24.1"
reportlab = "^3.6.12"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.7.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
